[package]
name = "e9571_btc_coinjoin_analyse_lib"
version = "0.1.0"
edition = "2024"
description = "A BTC coinjoin analysis library that identifies suspicious transactions through input/output anomaly thresholds, capable of recognizing ZeroLink, WabiSabi, JoinMarket, and Chaumian protocol coinjoin behaviors"
license = "MIT"
repository = "https://github.com/e9571/e9571_btc_coinjoin_analyse_lib"
documentation = "https://docs.rs/e9571_btc_coinjoin_analyse_lib"
homepage = "https://github.com/e9571"
keywords = ["bitcoin", "coinjoin", "blockchain", "analysis", "cryptocurrency"]
categories = ["cryptography", "data-structures"]

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.141"

